# toolsmdp

./: CLAUDE.md  README.md  aml.yaml  example_hotpotqa.json  plan.md  results.md  std_log (1).txt
carl_release/: README.md  pyproject.toml
carl_release/carl/: __init__.py
carl_release/carl/analysis/: __init__.py  calibration.py  errors.py
carl_release/carl/baselines/: __init__.py  cot_tools.py
carl_release/carl/core/: __init__.py  code_block_detector.py  context_block_detector.py  replacement.py  reward.py  rollout.py  segment.py
carl_release/carl/critic/: __init__.py  head.py  train.py  warmup_data.py
carl_release/carl/data/: __init__.py  datasets.py  tier_split.py
carl_release/carl/eval/: __init__.py  hallucination.py  hf_generator.py  resilience.py  run_full.py
carl_release/carl/ppo/: __init__.py  advantages.py  trainer.py
carl_release/carl/retrieval/: __init__.py  search.py
carl_release/carl/sandbox/: __init__.py  executor.py
carl_release/configs/: carl_3b.yaml  carl_7b.yaml  sr1_grpo_3b.yaml  sr1_ppo_3b.yaml
carl_release/dockerfiles/: Dockerfile.amd  Dockerfile.nvidia
carl_release/sample_data/critic_warmup/: critic_warmup_pairs.jsonl
carl_release/sample_data/train_pool/: train_pool.jsonl
carl_release/scripts/: 01_prepare_data.py  02_tier_classify.py  03_extract_warmup.py  04_train_critic.py  05_train_carl_ppo.py  06_eval_full.py
carl_release/tests/smoke/: __init__.py  test_critic_and_ppo.py  test_data_pipelines.py  test_eval.py  test_rollout.py
carl_release/tests/unit/: test_advantages.py  test_calibration.py  test_executor.py  (+4 more)
(+27 files in other folders)
